<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:textSize="20sp"
        android:id="@+id/question_textView"
        android:text="@string/question_africa"
        />
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:id="@+id/buttonLayout"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:id="@+id/true_button"
                android:elevation="10dp"
                android:background="@drawable/button_style1"
                android:text="@string/true_button"
                android:textColor="@color/white"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/false_button"
                android:elevation="10dp"
                android:background="@drawable/button_style1"
                android:text="@string/false_button"
                android:textColor="@color/white"/>

        </LinearLayout>

        <TextView
            android:id="@+id/correctedComment"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/correctedQuestionText"
            android:text="@string/correctedQuestionText"
            android:visibility="invisible" />
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
    >
        <ImageButton
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left"
            android:id="@+id/previous_button"
            android:layout_marginEnd="5dp"
            android:padding="15dp"

            android:contentDescription="@string/previous_Description" />
        <ImageButton
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/next_button"
            android:id="@+id/next_button"
            android:src="@drawable/arrow_right"
            android:padding="15dp"
            android:contentDescription="@string/next_Description" />
    </LinearLayout>



</LinearLayout>